[gd_scene load_steps=18 format=3 uid="uid://bbcrrbfv3lx2x"]

[ext_resource type="Script" path="res://scripts/recruitment_menu.gd" id="1_yovak"]
[ext_resource type="Shader" path="res://resources/shaders/menu_shader.gdshader" id="2_4xh8q"]
[ext_resource type="Theme" uid="uid://xtw2il5ua0g5" path="res://resources/themes/panel_theme.tres" id="3_a08da"]
[ext_resource type="Theme" uid="uid://ch03rvsjj8k6x" path="res://resources/themes/item_list_theme.tres" id="4_i74qs"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_item_list.gd" id="5_pfkpg"]
[ext_resource type="Texture2D" uid="uid://dtuvpu0ftqv3a" path="res://img/ui/icons.png" id="6_0ornp"]
[ext_resource type="Script" path="res://scripts/ui_elements/sound_button.gd" id="7_qc207"]
[ext_resource type="Texture2D" uid="uid://bsjx75srq732h" path="res://img/ui/TitleBox_64x16.png" id="8_6fvj7"]
[ext_resource type="Texture2D" uid="uid://bkqyvio06d3aa" path="res://img/ui/QuitIcon.png" id="9_6svsa"]
[ext_resource type="AudioStream" uid="uid://bek6q465xatap" path="res://audio/button_no_press.ogg" id="10_u2x0k"]
[ext_resource type="PackedScene" uid="uid://cd7v1b6dnp601" path="res://scenes/ui/prompt_window.tscn" id="11_82hq1"]
[ext_resource type="Script" path="res://scripts/ui/building_manager.gd" id="12_j1idg"]
[ext_resource type="Script" path="res://scripts/ui/unit_manager.gd" id="13_jhemu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fgfvw"]
shader = ExtResource("2_4xh8q")
shader_parameter/lod = 2.0

[sub_resource type="AtlasTexture" id="AtlasTexture_cs5v2"]
atlas = ExtResource("6_0ornp")
region = Rect2(324, 387, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrtq5"]
atlas = ExtResource("6_0ornp")
region = Rect2(3, 483, 26, 26)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3pjb1"]

[node name="BuildingsMenu" type="Control"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yovak")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_fgfvw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Center" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -436.5
offset_top = -291.5
offset_right = 436.5
offset_bottom = 291.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -310.0
offset_right = 404.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Center/CenterContainer"]
layout_mode = 2
theme = ExtResource("3_a08da")

[node name="HBoxContainer" type="HBoxContainer" parent="Center/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxBuildings" type="VBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxBuildings"]
layout_mode = 2
text = "Units"
horizontal_alignment = 1

[node name="BuildingList" type="ItemList" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxBuildings"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 1
theme = ExtResource("4_i74qs")
theme_override_font_sizes/font_size = 32
allow_search = false
fixed_icon_size = Vector2i(64, 64)
script = ExtResource("5_pfkpg")

[node name="VBoxInfo" type="VBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 400)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
layout_mode = 2
text = "Info"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Description"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 18
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Cost"
horizontal_alignment = 1

[node name="HBoxCostInfo" type="HBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo"]
layout_mode = 2

[node name="HBoxGold" type="HBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer"]
layout_mode = 2

[node name="GoldTexture" type="TextureRect" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer/HBoxGold"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_cs5v2")

[node name="GoldCost" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer/HBoxGold"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer2"]
layout_mode = 2

[node name="FoodTexture" type="TextureRect" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("AtlasTexture_mrtq5")

[node name="FoodCost" type="Label" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/HBoxCostInfo/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="ButtonBuild" type="Button" parent="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
focus_mode = 0
theme_override_font_sizes/font_size = 22
text = "Recruit"
script = ExtResource("7_qc207")

[node name="MenuTitle" type="MarginContainer" parent="Center"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = -4.0
offset_right = 136.0
offset_bottom = 64.0
grow_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("3_a08da")
metadata/_edit_lock_ = true

[node name="TitleBox" type="TextureRect" parent="Center/MenuTitle"]
layout_mode = 2
texture = ExtResource("8_6fvj7")
expand_mode = 5

[node name="TitleLabel" type="Label" parent="Center/MenuTitle"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 42
text = "Units"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="Center"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.5
offset_top = -13.5
offset_right = -46.5
offset_bottom = 94.5
grow_horizontal = 0
theme_override_colors/icon_pressed_color = Color(0.701961, 0.701961, 0.552941, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_3pjb1")
icon = ExtResource("9_6svsa")
flat = true
expand_icon = true
script = ExtResource("7_qc207")
press_sound = ExtResource("10_u2x0k")

[node name="PromptWindow" parent="." instance=ExtResource("11_82hq1")]
visible = false
layout_mode = 1
text = "Destroy selected building?"

[node name="BuildingManager" type="Node" parent="."]
script = ExtResource("12_j1idg")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="UnitManager" type="Node" parent="."]
script = ExtResource("13_jhemu")

[connection signal="empty_clicked" from="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxBuildings/BuildingList" to="." method="_on_building_list_empty_clicked"]
[connection signal="gui_input" from="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxBuildings/BuildingList" to="." method="_on_scroll_building_list"]
[connection signal="item_selected" from="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxBuildings/BuildingList" to="." method="_on_building_list_item_selected"]
[connection signal="pressed" from="Center/CenterContainer/PanelContainer/HBoxContainer/VBoxInfo/ButtonBuild" to="." method="_on_button_build_pressed"]
[connection signal="pressed" from="Center/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="no" from="PromptWindow" to="." method="_on_prompt_window_no"]
[connection signal="yes" from="PromptWindow" to="." method="_on_prompt_window_yes"]
